# machine-learning-in-elixir-mokumoku

./: .gitignore  README.md
ch01/: 01.livemd  01_origin.livemd  README.md
ch02/: 02.livemd  02_origin.livemd
ch02/nx_example/: README.md  mix.exs
ch02/nx_example/lib/: nx_example.ex
ch02/nx_example/test/: nx_example_test.exs
ch02/python/: pyproject.toml
